# frontier_detection

./: LICENSE  README.md
frontier_detection/: CMakeLists.txt  package.xml
frontier_detection/launch/: frontier_detection.launch  frontier_detection_using_seed.launch
frontier_detection/rviz/: elevation_map_visualization.rviz
frontier_detection/src/: frontier_detection.cpp  frontier_detection_using_seed.cpp
frontier_detection_using_seed/: CMakeLists.txt  package.xml  readme.txt
frontier_detection_using_seed/launch/: frontier_detection.launch  frontier_detection_using_naive_method.launch  frontier_detection_using_sampling_based.launch  frontier_detection_using_seed.launch  map_pub.launch
frontier_detection_using_seed/map/: map.yaml
frontier_detection_using_seed/rviz/: elevation_map_visualization.rviz
frontier_detection_using_seed/src/: frontier_detection_using_seed.cpp  sampling_based_frontier_detection.cpp
naive_frontier_detection/: CMakeLists.txt  effect.md  package.xml
naive_frontier_detection/include/: frontier_search.h
naive_frontier_detection/launch/: frontier_detection_using_naive_method.launch
naive_frontier_detection/rviz/: map.rviz
naive_frontier_detection/src/: frontier_search.cpp  pose_handler.cpp  robot_exploration.cpp
sampling_based_frontier_detection/: CMakeLists.txt  package.xml
sampling_based_frontier_detection/include/: costmap_tools.h  sampling_based_frontier_detection.h
sampling_based_frontier_detection/launch/: frontier_detection_using_sampling_based.launch
sampling_based_frontier_detection/result/: readme.md  sampling_based_frontier_detection's_result
sampling_based_frontier_detection/rviz/: map.rviz
sampling_based_frontier_detection/src/: sampling_based_frontier_detection copy 2.cpp  sampling_based_frontier_detection copy 3.cpp  sampling_based_frontier_detection copy.cpp  sampling_based_frontier_detection.cpp  sampling_based_frontier_detection_origin.cpp  sampling_based_frontier_detection_with_consuming_time.cpp  test_map_pub.cpp
